[package]
name = "rbspy-testdata"
version = "0.2.2"
authors = ["Kamal Marhubi <kamal@marhubi.com>", "Adam Jensen <adam@acj.sh>"]
description = "Test data for rbspy"
license = "MIT"
repository = "https://github.com/rbspy/rbspy-testdata"
homepage = "https://github.com/rbspy/rbspy-testdata"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
flate2 = "1.1.2"
goblin = "0.10.1"
libc = "0.2.175"
remoteprocess = "0.5.1"
