[package]
name = "rbspy-testdata"
version = "0.2.4"
authors = ["Kamal Marhubi <kamal@marhubi.com>", "Adam Jensen <adam@acj.sh>"]
description = "Test data for rbspy"
license = "MIT"
repository = "https://github.com/rbspy/rbspy-testdata"
homepage = "https://github.com/rbspy/rbspy-testdata"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1.4"
goblin = "0.10.2"
libc = "0.2.176"
remoteprocess = "0.5.1"
